# spx

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  DESIGN.md  EXECUTE.md  LICENSE  MACOS26_ISSUE.md  PRODUCTION_CHECKLIST.md  README.md  REFERENCE_SPEC.md  SPOTIFY.md  comprehensive-test.mjs  dev.sh  final-test.mjs  index.html  launch_spx.sh  package-lock.json  package.json  playwright.config.mjs  playwright.config.ts  run.sh  spx-web-player.html  test-discovery.sh  tsconfig.json  tsconfig.test.json  verify-authenticated-features.mjs  verify-authenticated-ui.mjs  verify-detail-screens.mjs  verify-spotify-api.mjs  verify-web-playback-device.mjs  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CROSS_REFERENCE.md  LIVE_TESTING_CHECKLIST.md  LIVE_TEST_Scenarios.md  PAIN_POINTS.md
scripts/: generate-icons.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  clippy.toml  entitlements.plist  tauri.conf.json  test-cast-auth.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.icns.bak  icon.icns.bak2
src-tauri/rust_cast_fork/src/: lib.rs
src-tauri/rust_cast_fork/src/channels/: receiver.rs
src-tauri/src/: cast_raw_auth.rs  commands.rs  cookie_capture.rs  events.rs  fn_utils.rs  lib.rs  librespot_client.rs  librespot_player.rs  macos_permission.rs  main.rs  mdns.rs  media_keys.rs  menu.rs  now_playing.rs  oauth_callback.rs  spotify_backend.rs  spotify_cast.rs  web_player_token.rs  ws_server.rs
src-tauri/src/actors/: handler.rs  mailbox.rs  mod.rs  spotify.rs  spotify_tests.rs  state.rs  tests.rs
src-tauri/src/spotify/: auth.rs  client.rs  device.rs  mock.rs  mod.rs  token.rs
src/components/: ArtistTopSongs.test.tsx  ArtistTopSongs.tsx  Artwork.tsx  AudioFeatures.tsx  ContextMenu.tsx  ContextPanel.tsx  DeviceSelector.tsx  HotkeyHelp.tsx  LoadingScreen.tsx  Logo.tsx  Notifications.module.css  Notifications.tsx  NowPlayingHero.tsx  PlayerBar.tsx  RecentGrid.tsx  RecentlyPlayedSection.tsx  Sidebar.test.tsx  Sidebar.tsx  StatsCard.tsx  SystemStatus.module.css  SystemStatus.tsx  TrackRow.tsx  icons.tsx
src/hooks/: useAuth.test.ts  useAuth.ts  useDevices.test.ts  useDevices.ts  useKeyboard.ts  useLikedTrack.ts  usePlayCount.ts  usePlayback.test.ts  usePlayback.ts  usePlaybackControls.ts
src/lib/: api.ts  backend-and-auth.test.ts  cache.test.ts  cache.ts  deviceManager.test.ts  deviceManager.ts  errors.test.ts  errors.ts  hotkeys.test.ts  hotkeys.ts  mock.ts  nowPlaying.test.ts  nowPlaying.ts  playback.test.ts  playback.ts  playerController.test.ts  playerController.ts  retry-http.test.ts  retry.test.ts  retry.ts  spotify-fetch.test.ts  spotify-sdk-args.test.ts  spotify-sdk.test.ts  spotify-sdk.ts  spotify.test.ts  spotify.ts  tauri-invoke.test.ts  tauri-invoke.ts  utils.test.ts  utils.ts  ws-client.test.ts  ws-client.ts
src/screens/: AlbumDetail.tsx  ArtistDetail.tsx  Diagnostics.test.tsx  Diagnostics.tsx  Home.tsx  Library.test.tsx  Library.tsx  PlaylistDetail.tsx  Queue.tsx  Search.test.tsx  Search.tsx  Stats.tsx
src/stores/: auth.test.ts  auth.ts  content.test.ts  content.ts  devices.test.ts  devices.ts  notifications.test.ts  notifications.ts  playCounts.test.ts  playCounts.ts  playback-polling.test.ts  playback.test.ts  playback.ts  spotify.ts  spotifyPlayCounts.ts  user.ts
src/styles/: animations.css  base.css  components.css  index.css  layout.css  modern.css  player.css  screens.css
src/tests/: api-real.test.ts  auto-record.ts  collect-exact-home-items.ts  collect-home-items.ts  debug-home-feed.ts  diag-all.ts  diag-recent.ts  diag-search.ts  e2e-all-devices.spec.ts  e2e-authenticated.spec.ts  e2e-cast-transfer.spec.ts  e2e-now-playing.spec.ts  e2e-transfer-verify.spec.ts  e2e.spec.ts  fetch-recent-activity.ts  grid-components.test.ts  home-screen.test.ts  library-screen.test.ts  personalized-home.test.ts  record-all.ts  record-api.ts  spotify-api.test.ts  utils.test.ts
src/tests/fixtures/: artist.json  manifest.json
src/tests/fixtures-real/: manifest.json  pause-error.json  playback.json  queue.json  recent.json  tracks.json  user.json
swift/SPX/: .swiftlint.yml  ContentView.swift  DESIGN.md  DESIGN_RULES.md  Info.plist  Package.swift  SPX.entitlements  SPXApp.swift
swift/SPX/Models/: AppView.swift  LocalDevice.swift  PlaylistItem.swift  SpotifyAlbum.swift  SpotifyArtist.swift  SpotifyDevice.swift  SpotifyImage.swift  SpotifyPlaybackState.swift  SpotifyPlaylist.swift  SpotifyTrack.swift  SpotifyUserProfile.swift  TrackInfo.swift
tasks/: spotify-sdk-refactor.md
(+77 files in other folders)
