[package]
name = "spx"
version = "0.1.0"
description = "Retro Spotify client"
authors = ["SPX"]
edition = "2021"
rust-version = "1.77.2"
default-run = "spx"

[lib]
name = "spx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mdns-test"
path = "src/bin/mdns-test.rs"

[[bin]]
name = "mercury-discovery-test"
path = "src/bin/mercury-discovery-test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
rust_cast = "0.21"
rustls = { version = "0.23", features = ["aws-lc-rs", "std"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
md5 = "0.7"
librespot-core = "0.4"
librespot-connect = "0.4"
librespot-protocol = "0.4"
librespot-discovery = "0.4"
futures-util = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
protobuf = "2.28"

[profile.release]
strip = true
lto = true
opt-level = "s"
