[package]
name = "spx"
version = "0.1.0"
description = "Retro Spotify client"
authors = ["SPX"]
edition = "2021"
rust-version = "1.77.2"
default-run = "spx"

[lib]
name = "spx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "process", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
rust_cast = { path = "rust_cast_fork" }
rustls = { version = "0.23", features = ["aws-lc-rs", "std"] }
md5 = "0.7"
librespot-oauth = "0.8"
librespot-core = "0.8"
librespot-connect = "0.8"
librespot-playback = { version = "0.8", default-features = false, features = ["rodio-backend"] }
vergen = "=9.0.6"
anyhow = "1"
chrono = "0.4"
dirs = "5"
thiserror = "2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
data-encoding = "2.8"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
libc = "0.2"
once_cell = "1.19"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
# Workaround for macOS 26 (Tahoe): Objective-C method return-type encodings
# changed from signed to unsigned integers, which objc2 validates strictly.
# Enable relax-sign-encoding so tao's app delegate callbacks do not panic.
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
